<resources>
    <string name="app_name">Money Mart</string>
    <string name="pbar_text_loading">Loading&#8230;</string>
    <string name="pbar_logging_in">Logging in&#8230;</string>
    <string name="lbl_alert">Alert</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_next">Next</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_try_again">Try Again</string>
    <string name="btn_dont_show_again">Don\'t show again</string>
    <string name="btn_fees_info">Back to fees info</string>
    <string name="btn_decline">Decline fee</string>
    <string name="btn_do_later">Do later</string>
    <string name="btn_later">Later</string>
    <string name="lbl_please_try_again">Please try again.</string>
    <string name="lbl_menu_logout">Logout</string>
    <string name="lbl_logout_confirm_msg">Are you sure you want to logout ?</string>
    <string name="invalid_user_signup">The username you have specified is either invalid or already taken.</string>
    <string name="invalid_user_constraint_signup">Username must be 8&#8211;20 characters in length and include one lowercase letter, one uppercase letter, and one number.</string>
    <string name="momentum_card_confirmation_details">Thank you for choosing Money Mart. In order to complete the short sign up process, you will need to already possess a Momentum Card.</string>
    <string name="momentum_card_confirmation_question">Do you have a Momentum Card?</string>
    <string name="content_description">Content</string>
    <string name="opening_hours_am">a.m.</string>
    <string name="opening_hours_pm">p.m.</string>
<string name="account_created_text">Your account has been successfully created. \nYou can now cash your first check!\n\nIn addition to being able to cash checks to your Momentum Card, you can also choose to cash checks to a bank account.\n\n\nAdd a bank account now?</string>
    <string name="store_locator">Store Locator</string>
    <string name="momeymart_app_version">V%1$s</string>
    <string name="navigation_money_mart">Money Mart</string>
    <string name="navigation_check_cashing">Check Cashing</string>
    <string name="navigation_my_account">My Account</string>
    <string name="navigation_payday_loans">Visit</string>
    <string name="navigation_momentum_card_drawer">Momentum Card</string>
    <string name="navigation_apply">Apply</string>
    <string name="navigation_add_account">Add Bank Account</string>
    <string name="navigation_other">Other</string>
    <string name="navigation_menu_cash_a_check">Cash a Check</string>
    <string name="navigation_menu_my_checks">Check Status</string>
    <string name="navigation_menu_card_services">Card Details</string>
    <string name="navigation_menu_personal_details">Personal Details</string>
    <string name="navigation_menu_account_details">Account Details</string>
    <string name="navigation_menu_contact_us">Contact Us</string>
    <string name="navigation_menu_contact_moneymart">Contact Money Mart</string>
    <string name="navigation_menu_store_locator">Store Locator</string>
    <string name="navigation_menu_faq">FAQ\'s</string>
    <string name="navigation_menu_logout">Logout</string>
    <string name="navigation_menu_change_psw">Change Password</string>
    <string name="navigation_menu_update_username">Update Username</string>
    <string name="navigation_menu_enter_username">Enter Your Username</string>
    <string name="navigation_menu_faq_question">FAQ\'s</string>
    <string name="navigation_menu_set_new_password">Set a New Password</string>
    <string name="navigation_menu_having_trouble">Having Trouble?</string>
    <string name="navigation_choose_username_password">Choose a Username and Password</string>
    <string name="navigation_momentum_card">Momentum Card?</string>
    <string name="navigation_agree_to_fees">Agree to Fees</string>
    <string name="navigation_check">Check</string>
    <string name="navigation_account_exists">Account Already Exists</string>
    <string name="navigation_account_created">Account Created</string>
    <string name="navigation_account_no_momntcard">You Do Not Have a Momentum card</string>
    <string name="navigation_account_invalid_username">Invalid Username</string>
    <string name="navigation_menu_privacy_policy">Privacy Policy</string>
    <string name="navigation_menu_cash_a_check_screen_title">Capture Check</string>
     <string name="navigation_visit_site">Money Mart</string>
    <string name="navigation_cash_advance">Cash Advance</string>
    <string name="navigation_learn_more">Learn More</string>
    <string name="navigation_titanium_card">Titanium+® MasterCard®</string>
    <string name="learn_more_title">Check Cashing via the mobile app is not yet available. \n Please visit one of our stores to take advantage of this service!</string>
    <string name="navigation_loan_title">Money Mart Loans</string>
    <string name="enter_username">Please enter your username.</string>
    <string name="enter_username_customtext">In order to reset your password, please enter your username so that we can find your account</string>
    <string name="update_forgot_username_custom_text">If you do not know your username, or you are having trouble, please contact customer services.</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="moneymart_content_description">Money Mart</string>
    <string name="password">Password</string>
    <string name="forgot_username_password">Forgot Username or Password?</string>
    <string name="login">Login</string>
    <string name="create_new">Create a new account</string>
    <string name="location">Location</string>
    <string name="support">Support</string>
    <string name="found_account">We\'ve found your account</string>
    <string name="security_questions">Please answer the following security question:</string>
    <string name="security_questions_one">Where does the cat usually sit?</string>
    <string name="answer">Answer</string>
    <string name="new_password"><![CDATA[ Enter a new password <b><font color=#FF4338>*</b> ]]></string>
    <string name="new_password_header_text"><![CDATA[ All fields marked with \'<b><font color=#FF4338>*</b>\' are mandatory]]></string>
    <string name="new_password_title_text"><![CDATA[ (all fields marked with \'<b><font color=#FF4338>*</b>\' are mandatory)]]></string>
    <string name="new_password_text">New password</string>
    <string name="confirm_password"><![CDATA[ Confirm the password <b><font color=#FF4338>*</b>]]></string>
    <string name="confirm_hint_password">Confirm password</string>
    <string name="day_format">Monday to Sunday</string>
    <string name="change_password_success_msg">Your password has been successfully changed.</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Last Name</string>
    <string name="house_number">House Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="postal">Zip/Postal Code</string>
    <string name="Country">Country</string>
    <string name="phone">Home Phone</string>
    <string name="mobile">Cell Phone</string>
    <string name="update_password">Update Password</string>
    <string name="update_username">Update Username</string>
    <string name="add_bank_account_title">Add Bank Account</string>
    <string name="bank_account_number_title"><![CDATA[<font color=#999999>Bank Account</font><br />Account no : %1$s]]></string>
    <string name="bank_title">Bank</string>
    <string name="bank_account_title">Bank Account</string>
    <string name="bank_account_no">Account no: %1$s</string>
    <string name="button_add_account_text">Add Account</string>
    <string name="remove_account_success_msg">Remove this bank account?</string>
    <string name="menu_edit_title">Edit</string>
    <string name="menu_delete_title">Delete</string>
    <string name="menu_add_title">Add</string>
    <string name="account_type_title">Account Type</string>
    <string name="account_no_title">Account Number</string>
    <string name="routing_no_title">Routing Number</string>
    <string name="confirm_account_no_title">Confirm Account Number</string>
    <string name="confirm_routing_no_title">Confirm Routing Number</string>
    <string name="savings_account_type_title">Savings</string>
    <string name="checking_account_type_title">Checking</string>
    <string name="account_type_hint">Select</string>
    <string name="edit_text_hint">\?</string>
    <string name="add_bank_account_success_msg">Account Added</string>
    <string name="add_bank_account_error_msg">A problem was encountered while adding this account. \nWould you like to try again?</string>
    <string-array name="account_type_items">
        <item>@string/savings_account_type_title</item>
        <item>@string/checking_account_type_title</item>
    </string-array>
    <string name="faq_tab_general">General</string>
    <string name="faq_tab_cc">Check Cashing</string>
    <string name="faq_tab_mc">Momentum Card</string>
    <string name="update_username_custom_text">To update your username, please contact customer services.</string>
    <string name="phone_content">To call</string>
    <string name="mail_content">To mail</string>
    <string name="security_question_choose">Choose a Security Question%1$s</string>
    <string name="security_question_choose_text">Please remember, your security question and answer will be needed to reset your password.</string>
    <string name="capture_check_front">Capture Check Front</string>
    <string name="capture_check_back">Capture Check Back</string>
    <string name="capture_check_void">Capture Check Void</string>
    <string name="confirm_check_amount">Confirm Check Amount</string>
    <string name="check_made_date">Enter check made date</string>
    <string name="momentum_card_text">Depositing to</string>
    <string name="date_picker_hint">MM/DD/YYYY</string>
    <string name="check_cashing_date_picker_hint">MM/DD/YYYY</string>
    <string name="momentum_card_hint">Momentum Card ****1234</string>
    <string name="btn_cash_check">Cash Check</string>
    <string name="fill_all_fields_msg">Please fill all fields</string>
    <string name="capture_all_images_msg">Please make sure you captured the front check and back check images.</string>
    <string name="having_trouble_custom_text">If you are having any trouble using this app, please contact us here:</string>
    <string name="security_questions_text">Security Questions</string>
    <string name="choose_username_mandatory">All fields marked with \'%1$s\' are mandatory.</string>
    <string name="choose_username_text">Choose a username %1$s</string>
    <string name="choose_username_message_updated">(Username must be 8&#8211;20 characters in length)</string>
    <string name="choose_specify_pwd_text">Specify a password %1$s</string>
    <string name="choose_specify_pwd_message">(Passwords must be 8&#8211;20 characters in length and include one lowercase letter, one uppercase letter, one number and one special character)</string>
    <string name="confirm_pwd_message">Confirm your password %1$s</string>
    <string name="security_question_message">Please choose a security question and provide an answer that only you will know.</string>
    <string name="select_question_hint">Select question</string>
    <string name="answer_text">Answer %1$s</string>
    <string name="privacy_policy_title">Privacy Policy</string>
</resources>