<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/moneymart_login_bg_style" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_setnew_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/found_account"
            android:textColor="@color/username_text"
            android:textSize="@dimen/font_size_15" />

        <TextView
            android:id="@+id/tv_new_password_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/new_password_header_text"
            android:textColor="@color/personal_details_label"
            android:textSize="@dimen/font_size_13"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_security_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/security_questions"
            android:textColor="@color/personal_details_label"
            android:textSize="@dimen/font_size_13" />

        <TextView
            android:id="@+id/tv_security_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:fontFamily="sans-serif"
            android:text="@string/security_questions_one"
            android:textColor="@color/username_text"
            android:textSize="@dimen/font_size_13" />

        <EditText
            android:id="@+id/et_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_17dp"
            android:background="@color/color_transparent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/answer"
            android:singleLine="true"
            android:textColor="@color/black_color"
            android:textColorHint="@color/account_details_enter_username_data"
            android:textSize="@dimen/font_size_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_57dp"
            android:text="@string/new_password"
            android:textColor="@color/username_text"
            android:textSize="@dimen/font_size_12" />

        <TextView
            android:id="@+id/choose_specify_pwd_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/choose_specify_pwd_message"
            android:textColor="@color/message_text_color"
            android:textSize="@dimen/font_size_9"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_17dp"
            android:background="@color/color_transparent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/new_password_text"
            android:inputType="textPassword"
            android:textColor="@color/black_color"
            android:textColorHint="@color/account_details_enter_username_data"
            android:textSize="@dimen/font_size_18" 
            android:maxLength="20"
            android:singleLine="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/confirm_password"
            android:textColor="@color/username_text"
            android:textSize="@dimen/font_size_12" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_17dp"
            android:background="@color/color_transparent"
            android:fontFamily="sans-serif-light"
            android:hint="@string/confirm_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/black_color"
            android:textColorHint="@color/account_details_enter_username_data"
            android:textSize="@dimen/font_size_18"
             android:maxLength="20"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_set_new_password_submit"
            android:layout_width="@dimen/login_et_username_width"
            android:layout_height="@dimen/login_text_header_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_80dp"
            android:background="@color/signin_header_bg"
            android:text="@string/submit"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_14"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>